# main_backend

./: .env  README.md  main.py  pyproject.toml
.github/workflows/: Deploy.yml
django_main_project/: manage.py  model.py
django_main_project/mediastore/uploads/2025-12-23/: .env_dIoIwEn
django_main_project/mysite/: asgi.py  db_router.py  urls.py
django_main_project/mysite/settings/: dev_settings.py  settings.py
django_main_project/ocrapp/: models.py  serializers.py  urls.py  views.py
django_main_project/ocrapp/migrations/: 0001_initial.py
django_main_project/ocrapp/until/: Response.py
